# PETSc_FEM

./: CMakeLists.txt  README  config.h.in
cmake-modules/: FindPETSc.cmake
include/: CMakeLists.txt  femcontroller.h  settings.h
src/: CMakeLists.txt  femcontroller.cpp  main.cpp  settings.cpp
